3.59   (? October 2001)
- Delete No_op_allocator.h.

3.58   (5 October 2001)
- [Simple_]Handle_for<> protection cleanup, non-const Ptr() added.
- Remove cartesian_classes.h.
- Add New_delete_allocator.h.
- Handle_for<> should work for virtual hierarchies now.

3.57   (12 September 2001)
- Fixes for SunPro.

3.56   (15 August 2001)
- Oops : #ifdef instead of #ifndef.

3.55   (15 August 2001)
- SunPro has problems with protected/friend.

3.54   (15 August 2001)
- Add SunPro support in memory.h.

======================== CGAL 2.3 ========================

3.53   (23 July 2001)
- renamed cmp_* to compare_* and *_dist_* to *_distance_* and 
  leftturn, Leftturn, LEFTTURN to left_turn, Left_turn, LEFT_TURN and
  rightturn, Rightturn, RIGHTTURN to right_turn, Right_turn, RIGHT_TURN
  and compare_lexicographically* to compare_*
  (deprecated the old names but didn't remove them).

3.52   (18 July 2001)
- changed Less_distance_to_point_[23] to use default construction
- changed Less_rotate_ccw_2 to use default construction
- removed redundant Left_of_line_2

3.51   (12 July 2001)
- Add Kernel_traits<>.

3.50   (12 July 2001)
- Added Arity to Call_perpendicular_to_get.

3.49   (10 July 2001)
- further traits update 
- New predicate : coplanar_orientation(3 points).

3.48   (26 June 2001)
- Deprecate Equal_xy_2 and Equal_xyz_3.

3.47   (21 June 2001)
- Cleanup kernel_to_kernel.h
- Use new macros for the traits interface so that it can be reused elsewhere.

3.46   (21 June 2001)
- Traits update.

3.45   (20 June 2001)
- Cleanup misc.h and don't include it from basic.h.
- Added Construct_orthogonal_vector_[23]
- Added Construct_opposite_vector_[23]

3.44   (19 June 2001)
- Change to support cgal_window instead of LEDA (CGAL_USE_CGAL_WINDOW).

3.43   (19 June 2001)
- added Construct_centroid_[23]

3.42   (19 June 2001)
- added Bounded_side_2 and Bounded_side_3 to traits

3.41   (18 June 2001)
- #include all _2 and _3 classes in user_classes.h.

3.40   (7 June 2001)