@@ -1,5 +1,6 @@
 3.59   (? October 2001)
 - Delete No_op_allocator.h.
+- Cleanup Object.h.
 
 3.58   (5 October 2001)
 - [Simple_]Handle_for<> protection cleanup, non-const Ptr() added.
